2012-01-18  Jesse Kornblum <research@jessekornblum.com>

	* CONFIGURE_FC.sh: Removed FC16 checks. It doesn't work.

2012-01-16  Jesse Kornblum <research@jessekornblum.com>

	* CONFIGURE_FC.sh: Updated for Fedora Core 16. Improved error messages.

2012-01-09  Jesse Kornblum <research@jessekornblum.com>

	* Makefile.am: The doc files for Win32 were backward. Addresses bug 3471505.

2012-01-06  Jesse Kornblum <research@jessekornblum.com>

	* Makefile.am: Changed rule for converting man pages to Windows text files

2012-01-06  Jesse Kornblum <research@jessekornblum.com>
	
	* configure.ac: Version bump to 4.0.0
	* src/hashlist.cpp: Legibility changes only.
	* doc/Makefile: Updating man page locations
	* src/common.h: Added NEWLINE definition for Win32

2012-01-05  Jesse Kornblum <research@jessekornblum.com>

	* doc: Sync'ed files from trunk

2011-12-27  Jesse Kornblum <research@jessekornblum.com>

	* src/files.cpp: Added spaces to isxdigit macro for OS X compilation.

2011-12-27  Simson Garfinkel  <simsong@Mucha.local>

	* src/hashlist.cpp (hashmap::add_file): now makes a copy of the hex hash and assures that it is lower case. 

2011-12-26  Simson Garfinkel  <simsong@Mucha.local>

	* src/main.h (class state): removed h_nsrl15 variable. Now it always looks for nsrl15 files when trying to decode a hash file.

2011-12-20  Simson Garfinkel  <simsong@arlington-8-30-79-4.ncr.vt.edu>

	* tests/testfiles/Makefile.am (testfiles.zip): removed $FILES from release; now testfiles.zip is built as part of the release, and the FILES are in it.

2011-12-17  Simson Garfinkel  <simsong@imac3.home>

	* src/files.cpp (state::find_hash_in_line): removed ILOOK3 intentional fall through. Now we explicitly do it.

	* src/display.cpp (display::portable_gmtime): We needed a gmtime()
	in multiple locaitons that was portable and threadsafe, so we
	created this from the code that was previously in
	md5deep_display_hash.